fixed code to better align to page

--- a/main.css
+++ b/main.css
@@ -57,12 +57,9 @@ figcaption {
 
 .col {
     display: flex;
-    background-color: #BFACB5;
-    border-style: solid;
-    border-color: #7F7B82;
-    border-width: thin;
     justify-content: center;
-    max-width: 75%;
+    max-width: 100%;
+    align-items: center;
 }
 
 .container {
@@ -70,13 +67,6 @@ figcaption {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
-
-img {
-    padding-top: 4%;
-    padding-bottom: 4%;
-    max-width: 50%;
-    height: auto;
 }
 
 body {
@@ -97,4 +87,15 @@ body {
     padding-left: 4%;
     padding-right: 4%;
     padding-bottom: 4%;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 30%;
+    border-bottom-style: solid;
+    border-bottom-color: #BFACB5;
+    border-bottom-width: thin;
 }
